modify user and routine view and controller so that edit, show and index views function

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,6 +11,9 @@
   <label>Password</label><br>
   <%= f.password_field :password %><br>
 
+  <label>Password Confirmation</label><br>
+  <%= f.password_field :password_confirmation %><br>
+
   <label>Email</label><br>
   <%= f.text_field :email %><br><br>
 
