change start time and end time coumn from int to string and delete start_time and end_time methods in routine model

--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%=@routine.name%></h1>
+<%binding.pry%>
 Start Time: <%=@routine.start_time%> <br>
 End Time: <%=@routine.end_time%> <br>
 <br>
@@ -10,5 +11,7 @@ Tasks:
 <br>
 <br>
 <%=link_to("Add this routine to your routines", user_routine_add_path(User.find(session[:id]), @routine))%>
-<%if session[:id] == @routine.originator.id%>
+<%if session[:id] == @routine.originator_id%>
+<br>
 <%= link_to('Edit this routine', edit_user_routine_path(User.find(session[:id]), @routine)) %>
+<%end%>
