--- a/app/views/routines/new.html.erb
+++ b/app/views/routines/new.html.erb
@@ -1,14 +1,19 @@
 <h1>Create A New Routine</h1>
 
 <%= form_for [@user, @routine] do |f| %>
-  <label>Name:</label><br>
-  <%= f.text_field :name %><br>
+  <label>Name:</label>
+  <%= f.text_field :name %><br><br>
 
-  <label>Start Time</label><br>
-  <%= f.text_field :start_time %><br>
+  Routine avalable from
+  <%= f.select :start_time, options_for_select(['1:00am', '2:00am', '3:00am', '4:00am', '5:00am','6:00am',
+   '7:00am', '8:00am', '9:00am', '10:00am', '11:00am', '12:00pm', '1:00pm', '2:00pm', '3:00pm', '4:00pm',
+   '5:00pm','6:00pm', '7:00pm', '8:00pm', '9:00pm', '10:00pm', '11:00pm', '12:00am'  ]), { prompt: "Start Time" } %> to
 
-  <label>End Time</label><br>
-  <%= f.password_field :end_time %><br><br>
+   <%= f.select :end_time, options_for_select(['1:00am', '2:00am', '3:00am', '4:00am', '5:00am','6:00am',
+    '7:00am', '8:00am', '9:00am', '10:00am', '11:00am', '12:00pm', '1:00pm', '2:00pm', '3:00pm', '4:00pm',
+    '5:00pm','6:00pm', '7:00pm', '8:00pm', '9:00pm', '10:00pm', '11:00pm', '12:00am'  ]), { prompt: "End Time" } %>
 
+  <br>
+  <br>
   <%= f.submit %>
 <% end %>
