ensure uniquienss of new task name fields

--- a/app/views/routines/new.html.erb
+++ b/app/views/routines/new.html.erb
@@ -26,25 +26,25 @@ Add tasks to this routine from existing collection:
   And/Or create your own tasks for this routine(up to 10!):
   <br>
   <label>Task 1 name:</label>
-  <%=text_field(:task, :name)%><br>
+  <%=text_field(:task, :name1)%><br>
   <label>Task 2 name:</label>
-  <%=text_field(:task, :name)%><br>
+  <%=text_field(:task, :name2)%><br>
   <label>Task 3 name:</label>
-  <%=text_field(:task, :name)%><br>
+  <%=text_field(:task, :name3)%><br>
   <label>Task 4 name:</label>
-  <%=text_field(:task, :name)%><br>
+  <%=text_field(:task, :name4)%><br>
   <label>Task 5 name:</label>
-  <%=text_field(:task, :name)%><br>
+  <%=text_field(:task, :name5)%><br>
   <label>Task 6 name:</label>
-  <%=text_field(:task, :name)%><br>
+  <%=text_field(:task, :name6)%><br>
   <label>Task 7 name:</label>
-  <%=text_field(:task, :name)%><br>
+  <%=text_field(:task, :name7)%><br>
   <label>Task 8 name:</label>
-  <%=text_field(:task, :name)%><br>
+  <%=text_field(:task, :name8)%><br>
   <label>Task 9 name:</label>
-  <%=text_field(:task, :name)%><br>
+  <%=text_field(:task, :name9)%><br>
   <label>Task 10 name:</label>
-  <%=text_field(:task, :name)%>
+  <%=text_field(:task, :name10)%>
 
 
   <br>
