--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,7 +22,7 @@
   <%= f.password_field :password_confirmation %><br>
 
   <label>Email</label><br>
-  <%= f.text_field :email %><br><br>
+  <%= f.email_field :email %><br><br>
 
   <%= f.submit %>
 <% end %>
