--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -5,13 +5,22 @@ End Time: <%=@routine.end_time%> <br>
 <br>
 <br>
 Tasks:
+<br><br>
 <%@routine.tasks.all.each do |task|%>
-<ul><%=task.name%></ul>
+<li><%=task.name%></li>
 <%end%>
 <br>
 <br>
-<%=link_to("Add this routine to your routines", user_routine_add_path(User.find(session[:id]), @routine))%>
-<%if session[:id] == @routine.originator_id%>
+
+<%if !User.find(session[:id]).routines.include?(@routine)%>
+  <%=link_to("Add this routine to your routines", user_routine_add_path(User.find(session[:id]), @routine))%>
+<%else%>
+  You already have this routine!
+<%end%>
+
 <br>
-<%= link_to('Edit this routine', edit_user_routine_path(User.find(session[:id]), @routine)) %>
+<br>
+
+<%if session[:id] == @routine.originator_id%>
+  <%= link_to('Edit this routine', edit_user_routine_path(User.find(session[:id]), @routine)) %>
 <%end%>
