--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,22 @@
 
 <h2>Log In</h2>
 
+<% if flash[:alert] != nil %>
+
+  <b>!!!---<%=flash[:alert]%>---!!!</b>
+  <br>
+  <br>
+<%end%>
 
 <%= form_for(:session, url: login_path) do |f| %>
 
-  <%= f.label :email %>
-  <%= f.email_field :email, class: 'form-control' %> <br>
+  <%= f.label :username %>
+  <%= f.text_field :username%> <br>
 
   <%= f.label :password %>
-  <%= f.password_field :password, class: 'form-control' %><br>
+  <%= f.password_field :password%><br>
 
-  <%= f.submit "Log in", class: "btn btn-primary" %>
+  <%= f.submit "Log in"%>
 <% end %>
 
 <h2>Or</h2>
