--- a/app/views/routines/edit.html.erb
+++ b/app/views/routines/edit.html.erb
@@ -13,6 +13,37 @@
        '7:00am', '8:00am', '9:00am', '10:00am', '11:00am', '12:00pm', '1:00pm', '2:00pm', '3:00pm', '4:00pm',
        '5:00pm','6:00pm', '7:00pm', '8:00pm', '9:00pm', '10:00pm', '11:00pm', '12:00am'], :selected => @routine.end_time)%>
 
+    <br><br>
+    Tasks for this Routine:<br>
+    <%= f.collection_check_boxes(:task_ids, Task.all, :id, :name)%>
+    <br>
+    <br>
+    Or create a new task for this routine(up to 10!):
+      <br>
+      <label>Task 1 name:</label>
+      <%=text_field(:task, :name1)%><br>
+      <label>Task 2 name:</label>
+      <%=text_field(:task, :name2)%><br>
+      <label>Task 3 name:</label>
+      <%=text_field(:task, :name3)%><br>
+      <label>Task 4 name:</label>
+      <%=text_field(:task, :name4)%><br>
+      <label>Task 5 name:</label>
+      <%=text_field(:task, :name5)%><br>
+      <label>Task 6 name:</label>
+      <%=text_field(:task, :name6)%><br>
+      <label>Task 7 name:</label>
+      <%=text_field(:task, :name7)%><br>
+      <label>Task 8 name:</label>
+      <%=text_field(:task, :name8)%><br>
+      <label>Task 9 name:</label>
+      <%=text_field(:task, :name9)%><br>
+      <label>Task 10 name:</label>
+      <%=text_field(:task, :name10)%>
+
+      <br>
+      <br>
+
   <br>
   <br>
   <%= f.submit %>
