create begin_hour and end_hour methods in Routine model and simplify current_routine and upcoming_routine methods in User model

--- a/app/views/users/my_tasks.html.erb
+++ b/app/views/users/my_tasks.html.erb
@@ -1,3 +1,5 @@
-<%curren_user.tasks.each do |task|%>
-<%=link_to(task.name, task_path(task))%><br>
+<%curren_user.routines.each do |routine|%>
+  <%routine.tasks.each do |task|%>
+    <%=link_to(task.name, task_path(task))%><br>
+  <%end%?
 <%end%>
