--- a/app/views/users/my_routines.html.erb
+++ b/app/views/users/my_routines.html.erb
@@ -1,18 +1,18 @@
-<h1><%=User.find(session[:id]).name%>, here are your routines:</h1>
-<%User.find(session[:id]).routines.each do |routine|%>
+<h1><%=current_user.name%>, here are your routines:</h1>
+<%current_user.routines.each do |routine|%>
   <br>
   <%= routine.name %>
   <%routine.tasks.each do |task|%>
     <li><%=task.name%></li>
   <%end%>
-  <% if routine.originator_id == session[:id] %>
-    <%=link_to('Edit this routine', edit_user_routine_path(User.find(session[:id]), routine))%>
+  <% if routine.originator_id == current_user.id %>
+    <%=link_to('Edit this routine', edit_user_routine_path(current_user, routine))%>
     <br>
     or
   <%end%>
   <br>
 
-  <%= form_for User.find(session[:id]) do |f| %>
+  <%= form_for current_user do |f| %>
     <%= f.hidden_field :routine_to_delete, value: routine.id %>
     <%= f.submit "Delete this routine from your routines" %>
   <%end%>
