--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -12,8 +12,9 @@ Tasks:
 <br>
 <br>
 
-<%if !User.find(session[:id]).routines.include?(@routine)%>
-  <%=link_to("Add this routine to your routines", user_routine_add_path(User.find(session[:id]), @routine))%>
+
+<%if !current_user.routines.include?(@routine)%>
+  <%=link_to("Add this routine to your routines", user_routine_add_path(current_user, @routine))%>
 <%else%>
   You already have this routine!
 <%end%>
@@ -21,6 +22,6 @@ Tasks:
 <br>
 <br>
 
-<%if session[:id] == @routine.originator_id%>
-  <%= link_to('Edit this routine', edit_user_routine_path(User.find(session[:id]), @routine)) %>
+<%if current_user.id == @routine.originator_id%>
+  <%= link_to('Edit this routine', edit_user_routine_path(curren_user, @routine)) %>
 <%end%>
