add order_by_start_time and order_my_routines scope methods to Routine class

--- a/app/views/users/my_routines.html.erb
+++ b/app/views/users/my_routines.html.erb
@@ -1,5 +1,7 @@
 <h1><%=current_user.name%>, here are your routines:</h1>
-<%current_user.routines.each do |routine|%>
+
+
+<%Routine.order_my_routines(current_user).each do |routine|%>
   <br>
   <%= routine.name %> (<%=routine.start_time%> - <%=routine.end_time%>)
   <%routine.tasks.each do |task|%>
