--- a/app/views/routines/index.html.erb
+++ b/app/views/routines/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Here Are All Of The Routines!</h1>
-<%Routine.all.each do |routine|%>
+
+<%Routine.order_by_start_time.each do |routine|%>
 <%=link_to( routine.name, routine_path(routine))%>(<%=routine.start_time%> - <%=routine.end_time%>) <br>
 <%end%>
