--- a/app/views/users/my_tasks.html.erb
+++ b/app/views/users/my_tasks.html.erb
@@ -1,4 +1,4 @@
-<%curren_user.routines.each do |routine|%>
+<%current_user.tasks.uniq.each do |routine|%>
   <%routine.tasks.each do |task|%>
     <%=link_to(task.name, task_path(task))%><br>
   <%end%?
