--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,6 @@ consisting of <%= link_to(@user.number_of_tasks.to_s + " " + "task".pluralize(@u
 <h3>_______________________________________CURRENT_ROUTINE_________________________________________</h3>
 
 
-
 <% if !@user.current_routine.empty?%>
       <% @user.current_routine.each do |routine|   %>
         <%=routine.name%> (<%=routine.start_time%> to <%=routine.end_time%>)<br>
@@ -20,8 +19,8 @@ consisting of <%= link_to(@user.number_of_tasks.to_s + " " + "task".pluralize(@u
       <%end%>
 
 <% else %>
-      <h4> You do not have a routine that is applicable at the current time (<%=Time.now.strftime("%I:%M %p")%>)!</h4>
-      <h4>You can browse exiting ones <%= link_to('here', routines_path)%> or create your own <%= link_to('here', new_user_routine_path(@user))%> ! </h4>
+       You do not have a routine that is applicable at the current time (<%=Time.now.strftime("%I:%M %p")%>)! <br>
+       You can browse exiting ones <%= link_to('here', routines_path)%> or create your own <%= link_to('here', new_user_routine_path(@user))%> !
 <% end %>
 
 <br>
@@ -31,7 +30,7 @@ consisting of <%= link_to(@user.number_of_tasks.to_s + " " + "task".pluralize(@u
 
 
 <% if !@user.upcoming_routine.nil? &&  @user.upcoming_routine.class.to_s != "Array"%>
-    <%=@user.upcoming_routine.name%> (<%=@user.upcoming_routine.start_time%> to <%=@user.upcoming_routine.end_time%>)  <br>
+    <%= link_to(@user.upcoming_routine.name, routine_path(@user.upcoming_routine))%> ( <%=@user.upcoming_routine.start_time%> to <%=@user.upcoming_routine.end_time%> )  <br>
 <% else %>
     <h4> You do not have an upcoming routine for the day! </h4>
       <h4>You can browse exiting ones <%= link_to('here', routines_path)%> or create your own <%= link_to('here', new_user_routine_path(@user))%> ! </h4>
