--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -7,7 +7,7 @@ End Time: <%=@routine.end_time%> <br>
 Tasks:
 <br><br>
 <%@routine.tasks.all.each do |task|%>
-<li><%=task.name%></li>
+<li><%=link_to(task.name, task_path(task))%> </li>
 <%end%>
 <br>
 <br>
