--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,7 @@ consisting of <%= link_to(@user.number_of_tasks.to_s + " " + "task".pluralize(@u
 <% if !@user.upcoming_routine.nil? &&  @user.upcoming_routine.class.to_s != "Array"%>
     <%= link_to(@user.upcoming_routine.name, routine_path(@user.upcoming_routine))%> ( <%=@user.upcoming_routine.start_time%> to <%=@user.upcoming_routine.end_time%> )  <br>
 <% else %>
-    You do not have an upcoming routine for the day!
+    You do not have an upcoming routine for the day! <br>
     You can browse exiting ones <%= link_to('here', routines_path)%> or create your own <%= link_to('here', new_user_routine_path(@user))%>!
 <%end%>
 <br>
