--- a/app/views/users/my_routines.html.erb
+++ b/app/views/users/my_routines.html.erb
@@ -3,7 +3,7 @@
 
 <%Routine.order_my_routines(current_user).each do |routine|%>
   <br>
-  <%= routine.name %> (<%=routine.start_time%> - <%=routine.end_time%>)
+  <%= routine.name %> (<%=Routine.convert_from_24(routine.start_time)%> - <%=Routine.convert_from_24(routine.end_time)%>)
   <%routine.tasks.each do |task|%>
     <li><%=task.name%></li>
   <%end%>
