add a requirement for user input on start time and end time when creating routines

--- a/app/views/routines/new.html.erb
+++ b/app/views/routines/new.html.erb
@@ -5,9 +5,9 @@
   <%= f.text_field :name %><br><br>
 
   Routine avalable/visible from
-  <%= f.select :start_time, options_for_select(Routine.times), { prompt: "Start Time" } %> to
+  <%= f.select :start_time, options_for_select(Routine.times), { prompt: "Start Time" }, :required => true %> to
 
-   <%= f.select :end_time, options_for_select(Routine.times), { prompt: "End Time" } %>
+   <%= f.select :end_time, options_for_select(Routine.times), { prompt: "End Time" }, :required => true %>
 
   <br>
   <br>
