--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Here are all of the tasks</h1>
-<%Task.all.each do |task|%>
-<%=link_to(task.name, task_path(task))%><br>
+<h1><%=current_user.name%>, here are the tasks: </h1>
+<%@tasks.each do |task|%>
+  <%=link_to(task.name, task_path(task))%><br>
 <%end%>
