--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,5 @@
-
 <h1>Sign Up!</h1>
 
-<% if flash[:messages] != nil %>
-  <%flash[:messages].each do |message|%>
-    <b>!!!!----<%=message%>---!!!<br></b>
-  <%end%>
-<%end%>
-
 <br>
-<%= form_for(@user) do |f| %>
-  <label>Name:</label><br>
-  <%= f.text_field :name %><br>
-
-  <label>Username</label><br>
-  <%= f.text_field :username %><br>
-
-  <label>Password</label><br>
-  <%= f.password_field :password %><br>
-
-  <label>Password Confirmation</label><br>
-  <%= f.password_field :password_confirmation %><br>
-
-  <label>Email</label><br>
-  <%= f.email_field :email %><br><br>
-
-  <%= f.submit %>
-<% end %>
+  <%= render 'form' %>
+<br>
