--- a/app/views/routines/new.html.erb
+++ b/app/views/routines/new.html.erb
@@ -1,47 +1,4 @@
 <h1>Create A New Routine</h1>
 
-<%= form_for [@user, @routine] do |f| %>
-  <label>Name:</label>
-  <%= f.text_field :name %><br><br>
 
-  Routine avalable/visible from
-  <%= f.select :start_time, options_for_select(times), { prompt: "Start Time" }, :required => true %> to
-
-   <%= f.select :end_time, options_for_select(times), { prompt: "End Time" }, :required => true %>
-
-  <br>
-  <br>
-
-Add tasks to this routine from existing collection:
-  <br>
-  <%=collection_check_boxes(:task, :task_id, Task.all, :id, :name)%>
-  <br>
-  <br>
-  And/Or create your own tasks for this routine(up to 10!):
-  <br>
-  <br>
-  <label>Task 1 name:</label>
-  <%=text_field(:task, :name1)%><br>
-  <label>Task 2 name:</label>
-  <%=text_field(:task, :name2)%><br>
-  <label>Task 3 name:</label>
-  <%=text_field(:task, :name3)%><br>
-  <label>Task 4 name:</label>
-  <%=text_field(:task, :name4)%><br>
-  <label>Task 5 name:</label>
-  <%=text_field(:task, :name5)%><br>
-  <label>Task 6 name:</label>
-  <%=text_field(:task, :name6)%><br>
-  <label>Task 7 name:</label>
-  <%=text_field(:task, :name7)%><br>
-  <label>Task 8 name:</label>
-  <%=text_field(:task, :name8)%><br>
-  <label>Task 9 name:</label>
-  <%=text_field(:task, :name9)%><br>
-  <label>Task 10 name:</label>
-  <%=text_field(:task, :name10)%>
-
-  <br>
-  <br>
-  <%= f.submit %>
-<% end %>
+  <%= render 'form' %>
