move db quiery of user routines from routines index view file to my_routines methid in users controller

--- a/app/views/routines/index.html.erb
+++ b/app/views/routines/index.html.erb
@@ -12,7 +12,7 @@
 
   <h1><%=current_user.name%>, here are your routines:</h1>
 
-  <%Routine.order_my_routines(current_user).each do |routine|%>
+  <%@routines.each do |routine|%>
     <br>
     <%= routine.name %> (<%=Routine.convert_from_24(routine.start_time)%> - <%=Routine.convert_from_24(routine.end_time)%>)
     <%routine.tasks.each do |task|%>
