--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <%= link_to('log-out', logout_path) %> - - -
       <%= link_to('home', user_path(current_user)) %> - - -
       <%= link_to('edit my profile', edit_user_path(current_user)) %> - - -
-      <%= link_to('my routines', user_my_routines_path(current_user)) %> - - -
+      <%= link_to('my routines', user_routines_path(current_user)) %> - - -
       <%= link_to('all routines', routines_path) %> - - -
       <%= link_to('add a routine', new_user_routine_path(current_user)) %>
       <br>
